--- a/Code/package.json
+++ b/Code/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.7.0",
     "nodeman": "^1.1.2"
   }
