--- a/NewestCode_20_1/CLI/package.json
+++ b/NewestCode_20_1/CLI/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.7",
     "commander": "^11.1.0",
     "express": "^4.18.2",
+    "form-data": "^4.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.7.0",
     "nodeman": "^1.1.2",
